@@ -37,6 +37,10 @@ _MT_EXEC=`which monotone`
 # Save the PWD so MONOTONE macro can refer back to it
 _ROOT_DIR=`pwd -P`
 
+# Pick a random port, so running multiple testsuites concurrently on
+# the same machine has a hope of working.
+_PORT=`awk 'BEGIN {srand()} END {printf "%.0f\n", (rand() * 450 + 20050)}'< /dev/null`
+
 AT_DATA(test_keys, [@<:@pubkey tester@test.net@:>@
 MIGdMA0GCSqGSIb3DQEBAQUAA4GLADCBhwKBgQCfN/cAMabgb6T7m8ksGnpQ7LO6hOdnc/7V
 yivrRGtmpwSItljht1bmgLQF37KiSPoMEDUb1stfKxaMsYiy8iTyoQ+M2EVFP37n2rtnNZ0H
@@ -336,13 +340,13 @@ fi
 # note that NETSYNC_SERVE_START is _not_ a special case of this macro.
 m4_define([NETSYNC_SERVE_N_START], [
 NETSYNC_KILLHARD
-MONOTONE --db=test$1.db --rcfile=netsync.lua serve localhost:5555 $2 &
+MONOTONE --db=test$1.db --rcfile=netsync.lua serve localhost:$_PORT $2 &
 sleep 4
 ])
 # run as NETSYNC_SERVE_START(collection name)
 m4_define([NETSYNC_SERVE_START], [
 NETSYNC_KILLHARD
-MONOTONE --rcfile=netsync.lua serve localhost:5555 $1 &
+MONOTONE --rcfile=netsync.lua serve localhost:$_PORT $1 &
 sleep 4
 ])
 # run as NETSYNC_SERVE_STOP
@@ -354,7 +358,7 @@ NETSYNC_KILLHARD
 # run as NETSYNC_CLIENT_N_RUN(2|3, push|pull|sync, collection name[, expected result])
 # first argument chooses whether to use the 2nd or 3rd database
 m4_define([NETSYNC_CLIENT_N_RUN], [
-AT_CHECK(MONOTONE --db=test$1.db --rcfile=netsync.lua $2 localhost:5555 $3, [$4], [ignore], [ignore])
+AT_CHECK(MONOTONE --db=test$1.db --rcfile=netsync.lua $2 localhost:$_PORT $3, [$4], [ignore], [ignore])
 ])
 # run as NETSYNC_CLIENT_RUN(push|pull|sync, collection name[, expected result])
 m4_define([NETSYNC_CLIENT_RUN], [
